--- a/web-variables.env
+++ b/web-variables.env
@@ -5,3 +5,7 @@ DB_USERNAME=cacti
 DB_PASSWORD=db_password
 DB_PORT=3306
 DB_SSL=false
+
+APACHE_SRV_NAME=localhost
+APACHE_SRV_ALIAS=localhost2
+APACHE_SRV_ADMIN=webmaster@localhost
